# bingo-genome-viewer

./: .gitattributes  .gitignore  BiNgo Genome Viewer.command  CHANGELOG.md  CONTRIBUTING.md  Genomics Viewer.command  Install_Windows.bat  Install_macOS.command  LICENSE  MANIFEST.in  README.md  launch.bat  launch.sh  pyproject.toml
.github/workflows/: publish.yml
app/: .dockerignore  Dockerfile  docker-compose.yml
app/backend/: main.py  models.py  requirements.txt  state.py
app/backend/api/: data.py  genome.py  tracks.py
app/backend/readers/: annotation_reader.py  bam_reader.py  bigwig_reader.py  genbank_reader.py  genome_reader.py  vcf_reader.py
app/frontend/: index.html  package-lock.json  package.json
app/frontend/src/: App.jsx
bingoviewer/: __init__.py  __main__.py  cli.py  icon.py  install_shortcut.py
bingoviewer/frontend_dist/: index.html
bingoviewer/frontend_dist/assets/: index-11df7SiS.js  index-4OAJAWev.js  index-4e0ekl2v.js  index-6KBC4l8m.js  index-8IdzO8xu.js  index-9ef11nfr.js  index-A_9jpOkw.js  index-B2JCsARC.js  index-B76yovX0.js  index-BC4ehCBT.js  index-BCSzP6jt.js  index-BCt-qy1e.js  index-BJvrlkJc.js  index-BR3gvrSb.js  index-BRre64sM.js  index-BT4gA6rV.js  index-Bd0gT_Bd.js  index-BiPvX8T6.js  index-BscUA_Ed.js  index-BtW2e9dI.js  index-ByqdfcGG.js  index-BzwFsVal.js  index-C0QxrTJp.js  index-C0TWtdmz.js  index-C2ILwSL5.js  index-C72RjMV0.js  index-C9UVyUC6.js  index-CBzhxZOA.js  index-CCmPSKpX.js  index-CGO8vkRW.js  index-CGhSlgJp.js  index-CJJN6jln.js  index-CLJ5yCMU.js  index-CLU_ghFS.js  index-COd6pDWX.js  index-CQ2AKnkn.js  index-CRmp6rd8.js  index-CS6OwxIl.js  index-CTGVRHrf.js  index-CTqCAHkT.js  (+77 more)
bingoviewer/server/: main.py  models.py  state.py
(+36 files in other folders)
